5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1836_1276.log
== SUBMITION (2019-06-25 11:06:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[0]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[i,:])
print(total)
	
-- EXECUTION TIME:
0.881278
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[28 21 42 16 47 41 21]
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
[39 42 39 58 19 27 40 41 41]
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
[45 30 28 37 26 40 40 47]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:09:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[i,:])
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:10:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[i,:])
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:10:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:10:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
print(max(total))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:11:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
print(max(size(total)))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:13:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
print(max(total))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:16:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
for j in total:
	if j=max(total):
		print(total)
	
-- ERROR:
File "XXXX", line 11
    if j=max(total):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:17:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
for j in total:
	if j==max(total):
		print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:17:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
for j in total:
	if j==max(total):
		print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:17:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
for j in range(total):
	if j==max(total):
		print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:21:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
x=1
for j in total:
	if j==max(total):
		print(x)
		x=x+1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:22:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
x=1
for j in total:
	if j==max(total):
		print(x)
		x=x+1
	
-- EXECUTION TIME:
0.959196
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:26:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
x=1
for j in total:
	if j==max(total):
		print(x)
		x=x+1

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:26:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
x=1
for j in total:
	if j==max(total):
		print(x)
		x=x+1

	
-- EXECUTION TIME:
1.25156
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:27:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

n= array(eval(input("horario dos funcionarios: ")))

x= shape(n)[1]
total=zeros((x),dtype=int)
for i in range(x):
	total[i]= sum(n[:,i])
x=1
for j in total:
	if j==max(total):
		print(x)
		x=x+1
	else:
		x=x+1

	
-- EXECUTION TIME:
1.13942
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
